# chordial-mvp

./: .gitignore  NOTION_SETUP.md  README.md  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
assets/: motd.txt  motd_plain.txt
backups/: chordial_dev-20260714-212014.dump
deploy/: chordial-dev.service
discord_bot/: main.py
docs/: ACTION_RECONCILIATION_ENGINE.md  ACTION_TRANSLATION_ENGINE_DESIGN.md  BESPOKE_DATA_BACKEND_DESIGN.md  DATABASE_MIGRATIONS.md  DEV_DATABASE.md  MULTI_USER_SPEC.md  NATIVE_MIGRATION_PLAN.md  NATIVE_WORKSPACE_DESIGN.md  NOTION_INTEGRATION.md  SECURITY_NOTES.md  TELEGRAM_SETUP.md  V3_DESIGN.md
migrations/: 001_rename_temporal_context_to_context.py  002_add_delivery_eligibility_flags.py  003_add_memory_reinforcement_and_curation.py
scripts/: dev_db.py  init_fresh_db.py  make_motd.py  migrate_sqlite_to_postgres.py  notion_smoke_test.py  pg_backup.sh
tests/: conftest.py  test_action_events.py  test_agenda_native.py  test_agenda_quiet_hours.py  test_agenda_snapshot.py  test_agent_loop.py  test_anthropic_kwargs.py  test_completion_reconciler.py  test_compressor.py  test_cross_platform_migration.py  test_database_wal.py  test_delivery_eligibility.py  test_director.py  test_event_log.py  test_events_migration.py  test_introduction.py  test_link_codes.py  test_main_supervision.py  test_memory_curator.py  test_memory_upsert.py  test_memory_visibility.py  test_message_router.py  test_notion_tools.py  test_onboarding_history.py  test_onboarding_timezone.py  test_orchestrator.py  test_persona_cards.py  test_phase2_integration.py  (+10 more)
(+79 files in other folders)
